--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "devDependencies": {
     "@types/express": "^4.17.17",
     "@types/node": "^18.14.2",
+    "cors": "^2.8.5",
     "nodemon": "^2.0.20",
     "prisma": "^4.11.0",
     "ts-node": "^10.9.1",
